// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaGallery item not active 1`] = `
<body
  style=""
>
  <div />
</body>
`;

exports[`MediaGallery should download fileUrl 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="backdrop"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-root-573 ColorPair-white-574"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-root-559 Dialog-bg-white-566 Dialog-width-lg-571 modal makeStyles-paper-558"
      >
        <div
          class="Dialog-header-560"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-610 iconButton IconButton-medium-616 IconButton-text-612 Dialog-iconButton-562"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Carousel-wrapper-623"
        >
          <div
            class="Carousel-root-619 Carousel-swipable-628"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-page-622"
                  >
                    <div
                      class="Carousel-slide-620 slide"
                      data-test-class-name="slide"
                      style="width: 100%;"
                    >
                      <div>
                        <div
                          class="mediaHeader"
                        >
                          <h6
                            class="MuiTypography-root mediaTitle Typography-root-629 MuiTypography-subtitle2 MuiTypography-displayBlock"
                            data-testid="typography"
                          >
                            test-title-2
                          </h6>
                          <button
                            class="MuiButtonBase-root MuiButton-root Button-root-599 MuiButton-contained Button-contained-601 MuiButton-containedPrimary"
                            data-testid="download-button"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label Button-label-602"
                            >
                              <span
                                class="MuiButton-startIcon Button-startIcon-603 MuiButton-iconSizeMedium"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                                  />
                                </svg>
                              </span>
                              Download
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <img
                          alt="test-title-2"
                          class="image"
                          src="test-fileUrl.jpg"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-610 iconButton IconButton-medium-616 IconButton-text-612 carouselControl carouselControl--previous"
          data-testid="carousel-prev-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-610 iconButton IconButton-medium-616 IconButton-text-612 carouselControl carouselControl--next"
          data-testid="carousel-next-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MediaGallery should preview as bmi icon if url is empty 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="backdrop"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-root-174 ColorPair-white-175"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-root-160 Dialog-bg-white-167 Dialog-width-lg-172 modal makeStyles-paper-159"
      >
        <div
          class="Dialog-header-161"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-211 iconButton IconButton-medium-217 IconButton-text-213 Dialog-iconButton-163"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Carousel-wrapper-224"
        >
          <div
            class="Carousel-root-220 Carousel-swipable-229"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-page-223"
                  >
                    <div
                      class="Carousel-slide-221 slide"
                      data-test-class-name="slide"
                      style="width: 100%;"
                    >
                      <div>
                        <div
                          class="mediaHeader"
                        >
                          <h6
                            class="MuiTypography-root mediaTitle Typography-root-230 MuiTypography-subtitle2 MuiTypography-displayBlock"
                            data-testid="typography"
                          >
                            test-title
                          </h6>
                          <button
                            class="MuiButtonBase-root MuiButton-root Button-root-200 MuiButton-contained Button-contained-202 MuiButton-containedPrimary"
                            data-testid="download-button"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label Button-label-203"
                            >
                              <span
                                class="MuiButton-startIcon Button-startIcon-204 MuiButton-iconSizeMedium"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                                  />
                                </svg>
                              </span>
                              Download
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <svg
                          color="primary"
                          data-testid="bmi-icon"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-211 iconButton IconButton-medium-217 IconButton-text-213 carouselControl carouselControl--previous"
          data-testid="carousel-prev-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-211 iconButton IconButton-medium-217 IconButton-text-213 carouselControl carouselControl--next"
          data-testid="carousel-next-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MediaGallery should preview as url if any 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="backdrop"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-root-95 ColorPair-white-96"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-root-81 Dialog-bg-white-88 Dialog-width-lg-93 modal makeStyles-paper-80"
      >
        <div
          class="Dialog-header-82"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-132 iconButton IconButton-medium-138 IconButton-text-134 Dialog-iconButton-84"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Carousel-wrapper-145"
        >
          <div
            class="Carousel-root-141 Carousel-swipable-150"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-page-144"
                  >
                    <div
                      class="Carousel-slide-142 slide"
                      data-test-class-name="slide"
                      style="width: 100%;"
                    >
                      <div>
                        <div
                          class="mediaHeader"
                        >
                          <h6
                            class="MuiTypography-root mediaTitle Typography-root-151 MuiTypography-subtitle2 MuiTypography-displayBlock"
                            data-testid="typography"
                          >
                            test-title-2
                          </h6>
                          <button
                            class="MuiButtonBase-root MuiButton-root Button-root-121 MuiButton-contained Button-contained-123 MuiButton-containedPrimary"
                            data-testid="download-button"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label Button-label-124"
                            >
                              <span
                                class="MuiButton-startIcon Button-startIcon-125 MuiButton-iconSizeMedium"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                                  />
                                </svg>
                              </span>
                              Download
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <img
                          alt="test-title-2"
                          class="image"
                          src="test-fileUrl.jpg"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-132 iconButton IconButton-medium-138 IconButton-text-134 carouselControl carouselControl--previous"
          data-testid="carousel-prev-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-132 iconButton IconButton-medium-138 IconButton-text-134 carouselControl carouselControl--next"
          data-testid="carousel-next-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MediaGallery should preview as vimeo if type vimeo 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="backdrop"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-root-253 ColorPair-white-254"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-root-239 Dialog-bg-white-246 Dialog-width-lg-251 modal makeStyles-paper-238"
      >
        <div
          class="Dialog-header-240"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-290 iconButton IconButton-medium-296 IconButton-text-292 Dialog-iconButton-242"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Carousel-wrapper-303"
        >
          <div
            class="Carousel-root-299 Carousel-swipable-308"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-page-302"
                  >
                    <div
                      class="Carousel-slide-300 slide"
                      data-test-class-name="slide"
                      style="width: 100%;"
                    >
                      <div>
                        <div
                          class="mediaHeader"
                        >
                          <h6
                            class="MuiTypography-root mediaTitle Typography-root-309 MuiTypography-subtitle2 MuiTypography-displayBlock"
                            data-testid="typography"
                          >
                            test-title-3
                          </h6>
                        </div>
                        <div>
                          <iframe
                            allow="autoplay; fullscreen; picture-in-picture"
                            allowfullscreen=""
                            class="iframe test"
                            data-testid="iframe-element"
                            frameborder="0"
                            height="360"
                            sandbox="allow-scripts allow-same-origin"
                            src="https://player.vimeo.com/video/test-videolink"
                            width="640"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-290 iconButton IconButton-medium-296 IconButton-text-292 carouselControl carouselControl--previous"
          data-testid="carousel-prev-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-290 iconButton IconButton-medium-296 IconButton-text-292 carouselControl carouselControl--next"
          data-testid="carousel-next-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MediaGallery should preview as vimeo if type vimeo with mediaItem class 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="backdrop"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-root-332 ColorPair-white-333"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-root-318 Dialog-bg-white-325 Dialog-width-lg-330 modal makeStyles-paper-317"
      >
        <div
          class="Dialog-header-319"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-369 iconButton IconButton-medium-375 IconButton-text-371 Dialog-iconButton-321"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Carousel-wrapper-382"
        >
          <div
            class="Carousel-root-378 Carousel-swipable-387"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-page-381"
                  >
                    <div
                      class="Carousel-slide-379 slide"
                      data-test-class-name="slide"
                      style="width: 100%;"
                    >
                      <div>
                        <div
                          class="mediaHeader"
                        >
                          <h6
                            class="MuiTypography-root mediaTitle Typography-root-388 MuiTypography-subtitle2 MuiTypography-displayBlock"
                            data-testid="typography"
                          >
                            test-title-3
                          </h6>
                        </div>
                        <div>
                          <div
                            class="iframeBackground"
                          >
                            <svg
                              color="primary"
                              style="height: 360px;"
                            />
                          </div>
                          <iframe
                            allow="autoplay; fullscreen; picture-in-picture"
                            allowfullscreen=""
                            class="iframe test-0001"
                            data-testid="iframe-element"
                            frameborder="0"
                            height="360"
                            sandbox="allow-scripts allow-same-origin"
                            src="https://player.vimeo.com/video/test-videolink"
                            width="640"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-369 iconButton IconButton-medium-375 IconButton-text-371 carouselControl carouselControl--previous"
          data-testid="carousel-prev-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-369 iconButton IconButton-medium-375 IconButton-text-371 carouselControl carouselControl--next"
          data-testid="carousel-next-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MediaGallery should render component 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="backdrop"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-root-16 ColorPair-white-17"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-root-2 Dialog-bg-white-9 Dialog-width-lg-14 modal makeStyles-paper-1"
      >
        <div
          class="Dialog-header-3"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-53 iconButton IconButton-medium-59 IconButton-text-55 Dialog-iconButton-5"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Carousel-wrapper-66"
        >
          <div
            class="Carousel-root-62 Carousel-swipable-71"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-page-65"
                  >
                    <div
                      class="Carousel-slide-63 slide"
                      data-test-class-name="slide"
                      style="width: 100%;"
                    >
                      <div>
                        <div
                          class="mediaHeader"
                        >
                          <h6
                            class="MuiTypography-root mediaTitle Typography-root-72 MuiTypography-subtitle2 MuiTypography-displayBlock"
                            data-testid="typography"
                          >
                            test-title
                          </h6>
                          <button
                            class="MuiButtonBase-root MuiButton-root Button-root-42 MuiButton-contained Button-contained-44 MuiButton-containedPrimary"
                            data-testid="download-button"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label Button-label-45"
                            >
                              <span
                                class="MuiButton-startIcon Button-startIcon-46 MuiButton-iconSizeMedium"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                                  />
                                </svg>
                              </span>
                              Download
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <svg
                          color="primary"
                          data-testid="bmi-icon"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-53 iconButton IconButton-medium-59 IconButton-text-55 carouselControl carouselControl--previous"
          data-testid="carousel-prev-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-53 iconButton IconButton-medium-59 IconButton-text-55 carouselControl carouselControl--next"
          data-testid="carousel-next-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
